--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Chetan Mylapilli Portfolio</title>
+  <title>Sathvika Reddy Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -48,7 +48,7 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">Chetan Mylapilli</a></h1>
+      <h1><a href="index.html">Sathvika Reddy</a></h1>
 
       <h2>I'm a <span> <span class="chetanelement"></span> </span> </h2>
 
@@ -91,16 +91,16 @@
           <img src="assets/img/myphoto.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Hello! I am Chetan Mylapilli</h3>
+          <h3>Hello! I am Sathvika Reddy</h3>
           <p class="font-italic">
-            I'm pursuing my Bachelor's of Technology in the field Electronics & Communication Engineering at SRM University AP. </p>
+            I'm a graduate student from the University of North Texas. </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Date of Birth:</strong> 28 February 2001
+                <li><i class="icofont-rounded-right"></i> <strong>Date of Birth:</strong> 01 July 1999
                 </li>
                 
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Vijayawada, Andhra Pradesh</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Denton, Texas </li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -831,3 +831,4 @@
 </body>
 
 </html>
+
